--- a/en-features.html
+++ b/en-features.html
@@ -7,10 +7,10 @@
 <html>
 	<style>
 		#main > header {
-			background-image: -moz-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/banner2.jpg") !important;
-			background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/banner2.jpg") !important;
-			background-image: -ms-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/banner2.jpg") !important;
-			background-image: linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/banner2.jpg") !important;
+			background-image: -moz-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/bannerFeatures.jpg") !important;
+			background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/bannerFeatures.jpg") !important;
+			background-image: -ms-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/bannerFeatures.jpg") !important;
+			background-image: linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/bannerFeatures.jpg") !important;
 		}
 	</style>
 	<head>
@@ -21,7 +21,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
-		<link rel="icon" href="images/logo.png">
+		<link rel="icon" href="images/logo-small.png">
 	</head>
 	<body>
 
@@ -30,20 +30,20 @@
 
 				<!-- Header -->
 					<header id="header">
-						<img style="height: 40px; max-width: 40px; margin-left: 4px; margin-top: 4px;" src="images/logo.png">
-						<h1 style="padding-left: 30px;"><a href="index.html">Condos Cité Avenir Laval</a></h1>
+						<img style="height: 40px; max-width: 40px; margin-left: 4px; margin-top: 4px;" src="images/logo-small.png">
+						<h1 style="padding-left: 30px;"><a href="en-index.html">Condos Cité Avenir Laval</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
 									<a href="#menu" class="menuToggle"><span>Menu</span></a>
 									<div id="menu">
 										<ul>
-											<li><a href="index.html">Home</a></li>
-											<li><a href="plans.html">Plans</a></li>
-											<li><a href="neighborhood.html">Neighborhood</a></li>
-											<li><a href="features.html">Features</a></li>
-											<li><a href="builder.html">Builder</a></li>
-											<li><a href="contact.html">Contact</a></li>
+											<li><a href="en-index.html">Home</a></li>
+											<li><a href="en-plans.html">Plans</a></li>
+											<li><a href="en-neighborhood.html">Neighborhood</a></li>
+											<li><a href="en-features.html">Features</a></li>
+											<li><a href="en-builder.html">Builder</a></li>
+											<li><a href="en-contact.html">Contact</a></li>
 											<!-- <li><a href="elements.html">Elements</a></li> -->
 										</ul>
 									</div>
@@ -118,17 +118,17 @@
 								<p></p>
 								<p></p>
 								<center><h4 style="margin-top: 50px">Download complete list of features</h4></center>
-								<center><a href="Instructions.pdf" download style="margin-bottom: 50px" class="button special icon fa-download">Project Specifications</a><center>
+								<center><a href="other/SPECIFICATIONS.docx" download style="margin-bottom: 50px" class="button special icon fa-download">Project Specifications</a><center>
 							</div>
 						</section>
 					</article>
 
 				<!-- Footer -->
 				<footer id="footer" style="padding: 2em 0 0.5em 0;">
-						<ul class="copyright">
-							<li>&copy; Condos Cité Avenir Laval</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-						</ul>
-					</footer>
+					<ul class="copyright">
+						<li>&copy; Condos Cité Avenir Laval</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+					</ul>
+				</footer>
 
 			</div>
 
