--- a/en-index.html
+++ b/en-index.html
@@ -13,7 +13,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
-		<link rel="icon" href="images/logo.png">
+		<link rel="icon" href="images/logo-small.png">
 	</head>
 	<body class="landing">
 
@@ -27,18 +27,18 @@
 						<nav id="nav">
 							<ul>
 								<li class="alt">
-									<a href="index.html"><span>Français</span></a>
+									<a href="en-index.html"><span>Français</span></a>
 								</li>
 								<li class="special">
 									<a href="#menu" class="menuToggle"><span>Menu</span></a>
 									<div id="menu">
 										<ul>
-											<li><a href="index.html">Home</a></li>
-											<li><a href="plans.html">Plans</a></li>
-											<li><a href="neighborhood.html">Neighborhood</a></li>
-											<li><a href="features.html">Features</a></li>
-											<li><a href="builder.html">Builder</a></li>
-											<li><a href="contact.html">Contact</a></li>
+											<li><a href="en-index.html">Home</a></li>
+											<li><a href="en-plans.html">Plans</a></li>
+											<li><a href="en-neighborhood.html">Neighborhood</a></li>
+											<li><a href="en-features.html">Features</a></li>
+											<li><a href="en-builder.html">Builder</a></li>
+											<li><a href="en-contact.html">Contact</a></li>
 										</ul>
 									</div>
 								</li>
@@ -121,8 +121,8 @@
 								<p>Aliquam ut ex ut augue consectetur interdum endrerit imperdiet amet eleifend fringilla.</p>
 							</header>
 							<ul class="actions vertical">
-								<li><a href="contact.html" class="button fit special">Contact</a></li>
-								<li><a href="plans.html" class="button fit">Plans</a></li>
+								<li><a href="en-contact.html" class="button fit special">Contact</a></li>
+								<li><a href="en-plans.html" class="button fit">Plans</a></li>
 							</ul>
 						</div>
 					</section>
