--- a/en-neighborhood.html
+++ b/en-neighborhood.html
@@ -7,18 +7,18 @@
 <html>
 	<style>
 		#main > header {
-			background-image: -moz-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/shutter3.jpg") !important;
-			background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/shutter3.jpg") !important;
-			background-image: -ms-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/shutter3.jpg") !important;
-			background-image: linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/shutter3.jpg") !important;
+			background-image: -moz-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/bannerNeighborhood.jpg") !important;
+			background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/bannerNeighborhood.jpg") !important;
+			background-image: -ms-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/bannerNeighborhood.jpg") !important;
+			background-image: linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/bannerNeighborhood.jpg") !important;
 		}
 
 		@media screen and (max-width: 980px) {
 			#main > header {
-				background-image: -moz-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/shutter3.jpg") !important;
-				background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/shutter3.jpg") !important;
-				background-image: -ms-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/shutter3.jpg") !important;
-				background-image: linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/shutter3.jpg") !important;
+				background-image: -moz-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/bannerNeighborhood.jpg") !important;
+				background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/bannerNeighborhood.jpg") !important;
+				background-image: -ms-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/bannerNeighborhood.jpg") !important;
+				background-image: linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/bannerNeighborhood.jpg") !important;
 			}
 		}
 	</style>
@@ -30,7 +30,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
-		<link rel="icon" href="images/logo.png">
+		<link rel="icon" href="images/logo-small.png">
 	</head>
 	<body>
 
@@ -39,20 +39,20 @@
 
 				<!-- Header -->
 					<header id="header">
-							<img style="height: 40px; max-width: 40px; margin-left: 4px; margin-top: 4px;" src="images/logo.png">
-							<h1 style="padding-left: 30px;"><a href="index.html">Condos Cité Avenir Laval</a></h1>
+							<img style="height: 40px; max-width: 40px; margin-left: 4px; margin-top: 4px;" src="images/logo-small.png">
+							<h1 style="padding-left: 30px;"><a href="en-index.html">Condos Cité Avenir Laval</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
 									<a href="#menu" class="menuToggle"><span>Menu</span></a>
 									<div id="menu">
 										<ul>
-											<li><a href="index.html">Home</a></li>
-											<li><a href="plans.html">Plans</a></li>
-											<li><a href="neighborhood.html">Neighborhood</a></li>
-											<li><a href="features.html">Features</a></li>
-											<li><a href="builder.html">Builder</a></li>
-											<li><a href="contact.html">Contact</a></li>
+											<li><a href="en-index.html">Home</a></li>
+											<li><a href="en-plans.html">Plans</a></li>
+											<li><a href="en-neighborhood.html">Neighborhood</a></li>
+											<li><a href="en-features.html">Features</a></li>
+											<li><a href="en-builder.html">Builder</a></li>
+											<li><a href="en-contact.html">Contact</a></li>
 											<!-- <li><a href="elements.html">Elements</a></li> -->
 										</ul>
 									</div>
@@ -70,11 +70,6 @@
 							<div class="inner">
 								<p>Condos Cité Avenir Laval is in the heart of all the attractions of Downtown Laval. Enjoy urban living with the tranquility of your own residential neighborhood.</p>
 								<p>Condos Cité Avenir is nearby to all your needs; whether it be for work, leisure, transit, entertainment, nightlife, Schools, shopping.</p>
-								<p>Take advandage of La Ligne 360! The free public transit service that circle’s around the Laval downtown area. Condos Cité Avenir is just steps from the Du Souvenir / De L’avenir bus stop.</p>
-								<!-- <img class="map" style="margin-top: 40px; display: block; margin-left: auto; margin-right: auto; width: 95%; height: auto;" src="images/planDeSite.jpg"> -->
-
-								<p></p>
-
 								<div class="table-wrapper">
 									<table style="margin-top: 20px;">
 										<tbody>
@@ -101,10 +96,17 @@
 										</tbody>
 									</table>
 								</div>
+								<p></p>
+								<p>Take advandage of La Ligne 360! The free public transit service that circle’s around the Laval downtown area. Condos Cité Avenir is just steps from the Du Souvenir / De L’avenir bus stop.</p>
+								<center><a href="www.ligne360.com">www.ligne360.com</a></center>
+								<p></p>
 							</div>
-						</section>
 
-						<img class="map" style="display: block; width: 100%; height: auto;" src="images/planDeQuartier2.png">
+							<center>
+								<img class="map" style="display: block; width: 80%; height: auto;" src="images/planDeQuartier.png">
+							</center>
+
+						</section>
 
 					</article>
 
