--- a/en-contact.html
+++ b/en-contact.html
@@ -7,10 +7,10 @@
 <html>
 	<style>
 		#main > header {
-			background-image: -moz-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/banner2.jpg") !important;
-			background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/banner2.jpg") !important;
-			background-image: -ms-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/banner2.jpg") !important;
-			background-image: linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/banner2.jpg") !important;
+			background-image: -moz-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/bannerContact.jpg") !important;
+			background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/bannerContact.jpg") !important;
+			background-image: -ms-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/bannerContact.jpg") !important;
+			background-image: linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/bannerContact.jpg") !important;
 		}
 	</style>
 	<head>
@@ -21,7 +21,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
-		<link rel="icon" href="images/logo.png">
+		<link rel="icon" href="images/logo-small.png">
 	</head>
 	<body>
 
@@ -30,20 +30,20 @@
 
 				<!-- Header -->
 					<header id="header">
-						<img style="height: 40px; max-width: 40px; margin-left: 4px; margin-top: 4px;" src="images/logo.png">
-						<h1 style="padding-left: 30px;"><a href="index.html">Condos Cité Avenir Laval</a></h1>
+						<img style="height: 40px; max-width: 40px; margin-left: 4px; margin-top: 4px;" src="images/logo-small.png">
+						<h1 style="padding-left: 30px;"><a href="en-index.html">Condos Cité Avenir Laval</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
 									<a href="#menu" class="menuToggle"><span>Menu</span></a>
 									<div id="menu">
 										<ul>
-											<li><a href="index.html">Home</a></li>
-											<li><a href="plans.html">Plans</a></li>
-											<li><a href="neighborhood.html">Neighborhood</a></li>
-											<li><a href="features.html">Features</a></li>
-											<li><a href="builder.html">Builder</a></li>
-											<li><a href="contact.html">Contact</a></li>
+											<li><a href="en-index.html">Home</a></li>
+											<li><a href="en-plans.html">Plans</a></li>
+											<li><a href="en-neighborhood.html">Neighborhood</a></li>
+											<li><a href="en-features.html">Features</a></li>
+											<li><a href="en-builder.html">Builder</a></li>
+											<li><a href="en-contact.html">Contact</a></li>
 											<!-- <li><a href="elements.html">Elements</a></li> -->
 										</ul>
 									</div>
@@ -61,7 +61,6 @@
 							<div class="inner">
 
 								<section>
-									<p>Questions? We have the answers!</p>
 									<form method="post" action="https://formspree.io/condo@gmail.ca">
 										<div class="row uniform">
 											<div class="6u 12u$(xsmall)">
@@ -103,13 +102,7 @@
 										<b>Telephone:</b> 514-XXX-XXXX<br>
 										<b>Email:</b> info@m2construction.ca
 									</p>
-
-									<div id="map_canvas" style="width:400px; height:300px;" ></div>
-									<p></p>
-									<button onclick="displayMap()">See the map</button>
 								</center>
-	
-				
 
 							</div>
 						</section>
@@ -117,10 +110,10 @@
 
 				<!-- Footer -->
 				<footer id="footer" style="padding: 2em 0 0.5em 0;">
-						<ul class="copyright">
-							<li>&copy; Condos Cité Avenir Laval</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-						</ul>
-					</footer>
+					<ul class="copyright">
+						<li>&copy; Condos Cité Avenir Laval</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+					</ul>
+				</footer>
 
 			</div>
 
@@ -138,28 +131,25 @@
 				</style>
 
 			<script>
-					function displayMap() {
-						document.getElementById('map_canvas').style.display="block";
-						initialize();
-					}
 
-					function initialize() {
-						// create the map
-						var myOptions = {
-							zoom: 13,
-							center: new google.maps.LatLng(45.625469, -73.688291),
-							mapTypeId: google.maps.MapTypeId.ROADMAP
-						}
+				function myMap() {
 
-						map = new google.maps.Map(document.getElementById("map_canvas"),
-							myOptions);
+					var mapProp= {
+						zoom: 13,
+						center: new google.maps.LatLng(45.625469, -73.688291),
+						mapTypeId: google.maps.MapTypeId.ROADMAP
+					};
 
-						var marker = new google.maps.Marker({
-							position: {lat:45.625469, lng:-73.688291},
-							map: map,
-							title: 'Condos Cité Avenir Laval'
-						});
-					}
+					map = new google.maps.Map(document.getElementById("googleMap"),
+						mapProp);
+
+					var marker = new google.maps.Marker({
+						position: {lat:45.625469, lng:-73.688291},
+						map: map,
+						title: 'Condos Cité Avenir Laval'
+					});
+
+				}
 			</script>
 			
 			<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD-ljTOCCgZZlyDuu2xVR_pdV9QHiz2zfk&callback=myMap"
