--- a/en-elements.html
+++ b/en-elements.html
@@ -28,13 +28,13 @@
 									<a href="#menu" class="menuToggle"><span>Menu</span></a>
 									<div id="menu">
 										<ul>
-											<li><a href="index.html">Home</a></li>
-											<li><a href="plans.html">Plans</a></li>
-											<li><a href="neighborhood.html">Neighborhood</a></li>
-											<li><a href="features.html">Features</a></li>
-											<li><a href="builder.html">Builder</a></li>
-											<li><a href="contact.html">Contact</a></li>
-											<!-- <li><a href="elements.html">Elements</a></li> -->
+											<li><a href="en-index.html">Home</a></li>
+											<li><a href="en-plans.html">Plans</a></li>
+											<li><a href="en-neighborhood.html">Neighborhood</a></li>
+											<li><a href="en-features.html">Features</a></li>
+											<li><a href="en-builder.html">Builder</a></li>
+											<li><a href="en-contact.html">Contact</a></li>
+											<!-- <li><a href="en-elements.html">Elements</a></li> -->
 										</ul>
 									</div>
 								</li>
