--- a/en-level3.html
+++ b/en-level3.html
@@ -13,7 +13,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
-		<link rel="icon" href="images/logo.png">
+		<link rel="icon" href="images/logo-small.png">
 	</head>
 	<body>
 
@@ -22,20 +22,20 @@
 
 				<!-- Header -->
 					<header id="header">
-							<img style="height: 40px; max-width: 40px; margin-left: 4px; margin-top: 4px;" src="images/logo.png">
-							<h1 style="padding-left: 30px;"><a href="index.html">Condos Cité Avenir Laval</a></h1>
+							<img style="height: 40px; max-width: 40px; margin-left: 4px; margin-top: 4px;" src="images/logo-small.png">
+							<h1 style="padding-left: 30px;"><a href="en-index.html">Condos Cité Avenir Laval</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
 									<a href="#menu" class="menuToggle"><span>Menu</span></a>
 									<div id="menu">
 										<ul>
-											<li><a href="index.html">Home</a></li>
-											<li><a href="plans.html">Plans</a></li>
-											<li><a href="neighborhood.html">Neighborhood</a></li>
-											<li><a href="features.html">Features</a></li>
-											<li><a href="builder.html">Builder</a></li>
-											<li><a href="contact.html">Contact</a></li>
+											<li><a href="en-index.html">Home</a></li>
+											<li><a href="en-plans.html">Plans</a></li>
+											<li><a href="en-neighborhood.html">Neighborhood</a></li>
+											<li><a href="en-features.html">Features</a></li>
+											<li><a href="en-builder.html">Builder</a></li>
+											<li><a href="en-contact.html">Contact</a></li>
 											<!-- <li><a href="elements.html">Elements</a></li> -->
 										</ul>
 									</div>
@@ -47,12 +47,12 @@
 				<!-- Main -->
 					<article id="main">
 						<header>
-							<h2>Floor 2</h2>
+							<h2>Floor 3</h2>
 						</header>
 						<section class="wrapper style5">
 							<div class="inner">
 
-									<img class="map" style="margin-top: 40px; display: block; margin-left: auto; margin-right: auto; width: 95%; height: auto;" src="images/plansRoof.jpg">
+								<img class="map" style="margin-top: 40px; display: block; margin-left: auto; margin-right: auto; width: 95%; height: auto;" src="images/plansRoof.jpg">
 
 								<hr />
 
