--- a/en-elements.html
+++ b/en-elements.html
@@ -28,7 +28,7 @@
 									<a href="#menu" class="menuToggle"><span>Menu</span></a>
 									<div id="menu">
 										<ul>
-											<li><a href="en-index.html">Home</a></li>
+											<li><a href="index.html">Home</a></li>
 											<li><a href="en-plans.html">Plans</a></li>
 											<li><a href="en-neighborhood.html">Neighborhood</a></li>
 											<li><a href="en-features.html">Features</a></li>
