--- a/en-neighborhood.html
+++ b/en-neighborhood.html
@@ -40,14 +40,14 @@
 				<!-- Header -->
 					<header id="header">
 							<img style="height: 40px; max-width: 40px; margin-left: 4px; margin-top: 4px;" src="images/logo-small.png">
-							<h1 style="padding-left: 30px;"><a href="en-index.html">Condos Cité Avenir Laval</a></h1>
+							<h1 style="padding-left: 30px;"><a href="index.html">Condos Cité Avenir Laval</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
 									<a href="#menu" class="menuToggle"><span>Menu</span></a>
 									<div id="menu">
 										<ul>
-											<li><a href="en-index.html">Home</a></li>
+											<li><a href="index.html">Home</a></li>
 											<li><a href="en-plans.html">Plans</a></li>
 											<li><a href="en-neighborhood.html">Neighborhood</a></li>
 											<li><a href="en-features.html">Features</a></li>
