--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
 						<nav id="nav">
 							<ul>
 								<li class="alt">
-									<a href="en-index.html"><span>Français</span></a>
+									<a href="index.html"><span>Français</span></a>
 								</li>
 								<li class="special">
 									<a href="#menu" class="menuToggle"><span>Menu</span></a>
 									<div id="menu">
 										<ul>
-											<li><a href="en-index.html">Home</a></li>
+											<li><a href="index.html">Home</a></li>
 											<li><a href="en-plans.html">Plans</a></li>
 											<li><a href="en-neighborhood.html">Neighborhood</a></li>
 											<li><a href="en-features.html">Features</a></li>
