--- a/en-builder.html
+++ b/en-builder.html
@@ -36,16 +36,19 @@
 
 				<!-- Header -->
 					<header id="header">
-						<img style="height: 40px; max-width: 40px; margin-left: 4px; margin-top: 4px;" src="images/logo-small.png">
-						<h1 style="padding-left: 30px;"><a href="index.html">Condos Cité Avenir Laval</a></h1>
+						<img style="height: 40px; max-width: 40px; margin-left: 1em; margin-top: 4px;" src="images/logo-small.png">
+						<h1 style="padding-left: 45px;"><a href="index.html">Condos Cité Avenir Laval</a></h1>
 						<nav id="nav">
 							<ul>
+								<li class="alt">
+									<a href="index.html"><span>Français</span></a>
+								</li>
 								<li class="special">
 									<a href="#menu" class="menuToggle"><span>Menu</span></a>
 									<div id="menu">
 										<ul>
 											<li><a href="index.html">Home</a></li>
-											<li><a href="en-plans.html">Plans</a></li>
+											<li><a href="en-project.html">Project</a></li>
 											<li><a href="en-neighborhood.html">Neighborhood</a></li>
 											<li><a href="en-features.html">Features</a></li>
 											<li><a href="en-builder.html">Builder</a></li>
@@ -66,8 +69,8 @@
 						<section class="wrapper style5">
 							<div class="inner">
 
-								<p>The promoters of Condominiums Cité Avenir Laval have mandated M2 Construction inc with the construction of this project.</p>
-								<p>M2 Construction inc. is a family owned and operated company with over 35 years of experience in Building construction, Project Development and Project Management. M2 Construction inc. has overseen and directed the construction of many luxury homes, multi-family dwellings, as well as townhouses and condominium projects in the Greater Montreal area.</p>
+								<p>  The promoters of Condominiums Cité Avenir Laval have mandated M2 Construction inc with the construction of this project.</p>
+								<p>  M2 Construction inc. is a family owned and operated company with over 35 years of experience in Building construction, Project Development and Project Management. M2 Construction inc. has overseen and directed the construction of many luxury homes, multi-family dwellings, as well as townhouses and condominium projects in the Greater Montreal area.</p>
 	
 								<hr />
 
@@ -78,12 +81,14 @@
 						</section>
 					</article>
 
-				<!-- Footer -->
-					<!-- <footer id="footer">
+					<footer id="footer" style="padding: 2em 0 0.5em 0;">
 						<ul class="copyright">
-							<li>&copy; Condos Cité Avenir Laval</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy; Condos Cité Avenir Laval</li>
+							<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li><a href="en-contact.html" style="font-size: 3em; padding-left: 9px;" class="icon fa-envelope-o"><span class="label">Email</span></a>
+							<a href="http://facebook.com" style="font-size: 2.6em; padding-left: 7px;" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 						</ul>
-					</footer> -->
+					</footer>
 
 			</div>
 
