--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 									<div id="menu">
 										<ul>
 											<li><a href="index.html">Home</a></li>
-											<li><a href="en-plans.html">Plans</a></li>
+											<li><a href="en-project.html">Project</a></li>
 											<li><a href="en-neighborhood.html">Neighborhood</a></li>
 											<li><a href="en-features.html">Features</a></li>
 											<li><a href="en-builder.html">Builder</a></li>
@@ -59,18 +59,19 @@
 					</section>
 
 				<!-- One -->
-					<section id="one" class="wrapper style1 special" style="padding: 4em 0 1em 0;">
+					<section id="one" class="wrapper style1 special" style="padding: 3em 3em 1em 3em;">
 						<div class="inner">
-							<header class="major">
-								<h3 style="text-transform: none; font-weight: 400; font-family: Tahoma, Geneva, sans-serif;">Condos Cité Avenir Laval offers affordable condominiums in the heart of Downtown Laval, just steps from Metro Montmorency, Autoroutes 440 and 15</h3>
-								<h4 style="text-transform: none; font-weight: 400; font-family: Tahoma, Geneva, sans-serif;">One, two, or three  bedroom units are available.</h4>
+							<header class="major" style="margin-bottom: 30px;">
+								<h3 style="text-transform: none; font-weight: 400; border-color: rgba(255, 255, 255, 1);">Condos Cité Avenir Laval offers affordable condominiums in the heart of Downtown Laval, just steps from Metro Montmorency, Autoroutes 440 and 15</h3>
+								<h4 style="text-transform: none; font-weight: 400; border-color: rgba(255, 255, 255, 1);">One, two, or three  bedroom units are available.</h4>
+								<a href="en-contact.html" style="width: 250px; margin-left: auto; margin-right: auto; margin-bottom: 0px; margin-top: 25px;" class="button fit special">Contact</a>
 							</header>
 						</div>
 					</section>
 
 				<!-- Two -->
 					<!-- <section id="two" class="wrapper alt style2">
-						<section class="spotlight">
+						<section class="spotlight">	
 							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
 								<h2>Magna primis lobortis<br />
 								sed ullamcorper</h2>
@@ -114,23 +115,29 @@
 					</section> -->
 
 				<!-- CTA -->
-					<section id="cta" class="wrapper style4">
-						<div class="inner">
+					<section>
+						<!-- <div class="inner">
 							<header>
 								<h2>Arcue ut vel commodo</h2>
 								<p>Aliquam ut ex ut augue consectetur interdum endrerit imperdiet amet eleifend fringilla.</p>
 							</header>
 							<ul class="actions vertical">
 								<li><a href="en-contact.html" class="button fit special">Contact</a></li>
-								<li><a href="en-plans.html" class="button fit">Plans</a></li>
+								<li><a href="en-project.html" class="button fit">Project</a></li>
 							</ul>
-						</div>
+						</div> -->
+
+						<div id="googleMap" style="height:300px"></div>
+
 					</section>
 
 				<!-- Footer -->
 					<footer id="footer" style="padding: 2em 0 0.5em 0;">
 						<ul class="copyright">
-							<li>&copy; Condos Cité Avenir Laval</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy; Condos Cité Avenir Laval</li>
+							<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li><a href="en-contact.html" style="font-size: 3em; padding-left: 9px;" class="icon fa-envelope-o"><span class="label">Email</span></a>
+							<a href="http://facebook.com" style="font-size: 2.6em; padding-left: 7px;" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 						</ul>
 					</footer>
 
@@ -144,6 +151,35 @@
 			<script src="assets/js/util.js"></script>
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/main.js"></script>
+			<style type="text/css">
+				#map_canvas {display:none;}
+				</style>
 
+			<script>
+
+				function myMap() {
+
+					var mapProp= {
+						zoom: 13,
+						center: new google.maps.LatLng(45.625469, -73.688291),
+						mapTypeId: google.maps.MapTypeId.ROADMAP
+					};
+
+					map = new google.maps.Map(document.getElementById("googleMap"),
+						mapProp);
+
+					var marker = new google.maps.Marker({
+						position: {lat:45.625469, lng:-73.688291},
+						map: map,
+						title: 'Condos Cité Avenir Laval'
+					});
+
+				}
+			</script>
+			
+			<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD-ljTOCCgZZlyDuu2xVR_pdV9QHiz2zfk&callback=myMap"
+			async defer></script>
+			
+			<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD-ljTOCCgZZlyDuu2xVR_pdV9QHiz2zfk&callback=myMap"></script>
 	</body>
 </html>
