--- a/en-level1.html
+++ b/en-level1.html
@@ -22,16 +22,19 @@
 
 				<!-- Header -->
 					<header id="header">
-							<img style="height: 40px; max-width: 40px; margin-left: 4px; margin-top: 4px;" src="images/logo-small.png">
-							<h1 style="padding-left: 30px;"><a href="index.html">Condos Cité Avenir Laval</a></h1>
+						<img style="height: 40px; max-width: 40px; margin-left: 1em; margin-top: 4px;" src="images/logo-small.png">
+						<h1 style="padding-left: 45px;"><a href="index.html">Condos Cité Avenir Laval</a></h1>
 						<nav id="nav">
 							<ul>
+								<li class="alt">
+									<a href="index.html"><span>Français</span></a>
+								</li>
 								<li class="special">
 									<a href="#menu" class="menuToggle"><span>Menu</span></a>
 									<div id="menu">
 										<ul>
 											<li><a href="index.html">Home</a></li>
-											<li><a href="en-plans.html">Plans</a></li>
+											<li><a href="en-project.html">Project</a></li>
 											<li><a href="en-neighborhood.html">Neighborhood</a></li>
 											<li><a href="en-features.html">Features</a></li>
 											<li><a href="en-builder.html">Builder</a></li>
@@ -67,10 +70,13 @@
 
 				<!-- Footer -->
 				<footer id="footer" style="padding: 2em 0 0.5em 0;">
-						<ul class="copyright">
-							<li>&copy; Condos Cité Avenir Laval</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-						</ul>
-					</footer>
+					<ul class="copyright">
+						<li>&copy; Condos Cité Avenir Laval</li>
+						<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li><a href="en-contact.html" style="font-size: 3em; padding-left: 9px;" class="icon fa-envelope-o"><span class="label">Email</span></a>
+						<a href="http://facebook.com" style="font-size: 2.6em; padding-left: 7px;" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+					</ul>
+				</footer>
 
 			</div>
 
