--- a/en-neighborhood.html
+++ b/en-neighborhood.html
@@ -39,16 +39,19 @@
 
 				<!-- Header -->
 					<header id="header">
-							<img style="height: 40px; max-width: 40px; margin-left: 4px; margin-top: 4px;" src="images/logo-small.png">
-							<h1 style="padding-left: 30px;"><a href="index.html">Condos Cité Avenir Laval</a></h1>
+						<img style="height: 40px; max-width: 40px; margin-left: 1em; margin-top: 4px;" src="images/logo-small.png">
+						<h1 style="padding-left: 45px;"><a href="index.html">Condos Cité Avenir Laval</a></h1>
 						<nav id="nav">
 							<ul>
+								<li class="alt">
+									<a href="index.html"><span>Français</span></a>
+								</li>
 								<li class="special">
 									<a href="#menu" class="menuToggle"><span>Menu</span></a>
 									<div id="menu">
 										<ul>
 											<li><a href="index.html">Home</a></li>
-											<li><a href="en-plans.html">Plans</a></li>
+											<li><a href="en-project.html">Project</a></li>
 											<li><a href="en-neighborhood.html">Neighborhood</a></li>
 											<li><a href="en-features.html">Features</a></li>
 											<li><a href="en-builder.html">Builder</a></li>
@@ -63,13 +66,13 @@
 
 				<!-- Main -->
 					<article id="main">
-						<header>
+						<header style="background-attachment: scroll;">
 							<h2>Neighborhood</h2>
 						</header>
 						<section class="wrapper style5">
 							<div class="inner">
 								<p>Condos Cité Avenir Laval is in the heart of all the attractions of Downtown Laval. Enjoy urban living with the tranquility of your own residential neighborhood.</p>
-								<p>Condos Cité Avenir is nearby to all your needs; whether it be for work, leisure, transit, entertainment, nightlife, Schools, shopping.</p>
+								<p>Condos Cité Avenir is nearby to all your needs; whether it be for work, leisure, transit, entertainment, nightlife, schools, shopping.</p>
 								<div class="table-wrapper">
 									<table style="margin-top: 20px;">
 										<tbody>
@@ -98,7 +101,7 @@
 								</div>
 								<p></p>
 								<p>Take advandage of La Ligne 360! The free public transit service that circle’s around the Laval downtown area. Condos Cité Avenir is just steps from the Du Souvenir / De L’avenir bus stop.</p>
-								<center><a href="www.ligne360.com">www.ligne360.com</a></center>
+								<center><a href="http://ligne360.com">www.ligne360.com</a></center>
 								<p></p>
 							</div>
 
@@ -113,10 +116,12 @@
 				<!-- Footer -->
 				<footer id="footer" style="padding: 2em 0 0.5em 0;">
 					<ul class="copyright">
-						<li>&copy; Condos Cité Avenir Laval</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Condos Cité Avenir Laval</li>
+						<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li><a href="en-contact.html" style="font-size: 3em; padding-left: 9px;" class="icon fa-envelope-o"><span class="label">Email</span></a>
+						<a href="http://facebook.com" style="font-size: 2.6em; padding-left: 7px;" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 					</ul>
 				</footer>
-
 			</div>
 
 		<!-- Scripts -->
