--- a/en-project.html
+++ b/en-project.html
@@ -19,9 +19,23 @@
     }
 
 
-    @media screen and (max-width: 736px) {
+    @media screen and (max-width: 980px) {
         .big {
             display: none;
+        }
+
+        .med {
+            display: block !important;
+        }
+    }
+
+    @media screen and (max-width: 480px) {
+        .big {
+            display: none;
+        }
+
+        .med {
+            display: none !important;
         }
 
         .small {
@@ -53,16 +67,19 @@
 <div id="page-wrapper">
 
     <header id="header">
-        <img style="height: 40px; max-width: 40px; margin-left: 4px; margin-top: 4px;" src="images/logo-small.png">
-        <h1 style="padding-left: 30px;"><a href="index.html">Condos Cité Avenir Laval</a></h1>
+        <img style="height: 40px; max-width: 40px; margin-left: 1em; margin-top: 4px;" src="images/logo-small.png">
+        <h1 style="padding-left: 45px;"><a href="index.html">Condos Cité Avenir Laval</a></h1>
         <nav id="nav">
             <ul>
+                <li class="alt">
+                    <a href="index.html"><span>Français</span></a>
+                </li>
                 <li class="special">
                     <a href="#menu" class="menuToggle"><span>Menu</span></a>
                     <div id="menu">
                         <ul>
                             <li><a href="index.html">Home</a></li>
-                            <li><a href="en-plans.html">Plans</a></li>
+                            <li><a href="en-project.html">Project</a></li>
                             <li><a href="en-neighborhood.html">Neighborhood</a></li>
                             <li><a href="en-features.html">Features</a></li>
                             <li><a href="en-builder.html">Builder</a></li>
@@ -77,7 +94,7 @@
 
     <article id="main">
         <header>
-            <h2>Plans</h2>
+            <h2>Project</h2>
         </header>
         <section class="wrapper style5">
 
@@ -93,13 +110,25 @@
                     <img class="map" style="display: block; margin-left: auto; margin-right: auto;" src="images/plansBig.jpg" usemap="#image-map">
 
                     <map name="image-map">
-                        <area class="level3" target="_parent" alt="level3" title="level3" href="en-level3.html" coords="125,324,279,278,462,303,498,296,647,311,663,305,786,319,837,308,838,244,788,239,787,229,662,217,650,218,495,178,463,201,279,165,126,240" shape="poly">
-                        <area class="level2" target="_self" alt="level2" title="level2" href="en-level2.html" coords="126,324,127,386,280,363,462,373,496,372,648,381,663,376,787,384,836,379,839,309,787,320,666,307,648,311,496,297,463,302,278,279" shape="poly">
-                        <area class="level1" target="_top" alt="level1" title="level1" href="en-level1.html" coords="127,387,126,448,281,448,462,444,495,451,648,449,673,448,834,439,837,381,789,384,666,376,649,379,496,371,461,374,279,363" shape="poly">
+                        <area class="level4" target="_blank" alt="level4" title="level4" href="en-level1.html" coords="278,277,278,277,461,301,494,293,579,305,599,304,647,311,663,306,788,317,837,309,838,245,786,239,790,228,690,214,692,199,618,177,608,180,593,176,585,180,586,150,516,127,471,113,423,135,426,148,404,159,406,182,387,181,410,169,316,148,291,160,276,157,218,187,193,185,118,234,125,240,125,275,118,276,119,303,126,305,125,322,278,277" shape="poly">
+                        <area class="level3" target="_blank" alt="level3" title="level3" href="en-level1.html" coords="126,385,280,363,462,375,495,370,579,376,598,374,647,381,662,377,786,382,837,373,835,312,787,318,662,307,647,309,598,303,579,305,495,292,461,301,280,276,125,323,126,341,120,343,120,370,126,371" shape="poly">
+                        <area class="level2" target="_blank" alt="level2" title="level2" href="en-level1.html" coords="126,386,126,411,120,411,120,436,126,435,127,448,282,451,460,446,495,450,580,451,647,449,663,449,786,445,833,436,836,374,785,382,664,378,646,379,599,374,579,376,495,370,461,376,276,364" shape="poly">
+                        <area class="level1" target="_blank" alt="level2" title="level2" href="en-level1.html" coords="126,449,127,487,280,512,462,498,493,504,519,504,653,517,677,515,660,503,834,494,832,435,785,444,661,449,497,450,462,446,281,451" shape="poly">
                     </map>
                 </div>
             </center>
-            
+
+            <center>
+                <div class="med" style="display: none;">
+                    <img class="map" style="display: block; margin-left: auto; margin-right: auto;" src="images/plansMed.jpg" usemap="#image-map">
+                    <map name="image-map">
+                        <area target="_blank" alt="level4" title="level4" href="level1.html" coords="88,227,195,193,325,212,345,205,406,215,419,211,453,218,464,213,550,222,585,217,588,172,553,167,553,159,483,150,485,139,433,124,427,126,417,122,409,125,411,106,332,78,296,95,296,106,283,111,284,130,271,127,284,117,222,103,202,112,194,109,152,132,135,128,81,163,87,169,87,191,83,193,82,210,88,214" shape="poly">
+                        <area target="_blank" alt="level3" title="level3" href="level1.html" coords="88,270,195,254,323,263,347,260,405,265,421,263,453,266,464,264,549,266,586,263,584,217,550,222,465,213,453,218,420,211,405,214,346,207,323,211,196,192,88,226,88,240,81,242,81,258,88,258" shape="poly">
+                        <area target="_blank" alt="level2" title="level2" href="level1.html" coords="88,312,197,316,322,311,346,314,433,313,463,317,583,311,584,262,544,267,465,264,453,265,422,263,407,264,346,259,323,262,196,254,88,269,88,287,83,289,83,303,88,304,89,339,198,359,324,347,345,350,435,344,465,351,583,347,582,312,462,318,433,313,345,315,321,312,197,316" shape="poly">
+                        <area target="_blank" alt="level1" title="level1" href="level1.html" coords="91,338,197,361,324,345,344,352,435,343,465,351,581,346,582,312,463,317,433,312,344,314,323,310,196,315,90,312" shape="poly">
+                    </map>
+                </div>
+            </center>
             
             <div class="small" style="display: none;">
                     <div class="table-wrapper">
@@ -110,10 +139,13 @@
                                     <td style="text-align: center;"><a href="level1.html">Floor 1</a></td>
                                 </tr>
                                 <tr>
-                                    <td style="text-align: center;"><a href="level2.html">Floor 2</a></td>
+                                    <td style="text-align: center;"><a href="level1.html">Floor 2</a></td>
                                 </tr>
                                 <tr>
-                                    <td style="text-align: center;"><a href="level3.html">Floor 3</a></td>
+                                    <td style="text-align: center;"><a href="level1.html">Floor 3</a></td>
+                                </tr>
+                                <tr>
+                                    <td style="text-align: center;"><a href="level1.html">Floor 4</a></td>
                                 </tr>
                             </tbody>
                         </table>
@@ -147,7 +179,10 @@
 
     <footer id="footer" style="padding: 2em 0 0.5em 0;">
         <ul class="copyright">
-            <li>&copy; Condos Cité Avenir Laval</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+            <li>&copy; Condos Cité Avenir Laval</li>
+            <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+            <li><a href="en-contact.html" style="font-size: 3em; padding-left: 9px;" class="icon fa-envelope-o"><span class="label">Email</span></a>
+            <a href="http://facebook.com" style="font-size: 2.6em; padding-left: 7px;" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
         </ul>
     </footer>
 
